attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -19,6 +19,14 @@
     bottom: 0;
     right: 0;
     max-width: 100%;
+    div{
+        padding: 0;
+        margin: 0;
+        border: 2px solid red;
+        canvas{
+            border: 2px solid green;
+        }
+    }
 }
 .titles{
     display: flex;
